Remove white space, add text wrap, and fix idea card spacing

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
 /* <-- Type Selectors --> */
 
+*, *:after, *:before {
+  box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+}
+
 * {
   font-family: 'Open Sans', sans-serif;
 }
@@ -18,13 +24,15 @@ button {
 
 h1 {
   color: #E9E9F3;
+  padding-top: 10px;
+  padding-bottom: 10px;
   padding-left: 15px;
   font-size: xx-large;
 }
 
 h3 {
   font-weight: bold;
-  margin-top:
+  margin-bottom: 10px;
 }
 
 img {
@@ -43,14 +51,20 @@ label {
   font-weight: bold;
 }
 
-/* <--- Class Stylings ---> */
-
 main {
   height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: row;
   padding-right: 10px;
 }
+
+p {
+  max-width: 47ch;
+  white-space: normal;
+}
+
+/* <--- Class Stylings ---> */
 
 .body-input {
   margin: 1em 15em;
@@ -64,17 +78,19 @@ main {
   flex-direction: column;
   align-items: flex-start;
   margin: 10px;
-  height: 175px;
+  padding: 5px;
+  height: 300px;
 }
 
 .card-footer {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  position: static;
   font-weight: bold;
-  height: 1.5em;
-  padding-top: 2px;
-  padding-bottom: 2px;
+  height: 1.6em;
+  padding-top: 12px;
+  padding-bottom: 12px;
   background-color: #5356A4;
   color: #ffffff;
 }
@@ -84,7 +100,7 @@ main {
   flex-direction: row;
   justify-content: space-between;
   height: 1.5em;
-  padding-bottom: 8px;
+  padding-bottom: 30px;
   background-color: #1F1F3D;
 }
 
@@ -130,7 +146,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 31.5%;
+  width: 30%;
   height: 350px;
   margin: 10px;
   padding-bottom: 0px;
@@ -146,7 +162,7 @@ main {
   flex-wrap: wrap;
   padding: 10px;
   background-color: #eaeaf4;
-  width: auto;
+  width: 100%;
   height: auto;
 }
 
@@ -178,7 +194,7 @@ main {
 }
 
 .save-input:disabled,
-.save-input[disabled]{
+.save-input[disabled] {
   cursor: not-allowed;
   border: 2px solid #5356a4;
   background-color: #EAEAF4;
@@ -187,10 +203,9 @@ main {
 
 .search-bar {
   display: flex;
-  justify-content:flex-start;
+  justify-content: flex-start;
   width: 45.5%;
   margin: 8px;
-  height: 3.5em;
   border: 1px solid #5356a4;
   border-right: none;
   background-color: #353567;
@@ -203,11 +218,12 @@ main {
 
 .search-ideas-box {
   margin: 1em 15em;
+  padding-left: 10px;
   height: 50px;
   border: 2px solid #5356a4;
   border-radius: 2px;
   margin: 0 0 0 10px;
-    width: 100%;
+  width: 100%;
 }
 
 .search-img {
